# API-RADAR

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  TODO_BACKEND.md  alembic.ini  conftest.py  dev.db  main.py  pyproject.toml  pytest.ini  requirements.txt  worker.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/core/: config.py  logging.py  middleware.py  tracing.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  anomaly.py  endpoint.py  project.py  scan.py  test_run.py  test_run_model.py
backend/app/routers/: anomalies.py  endpoints.py  projects.py  scans.py
backend/app/schemas/: __init__.py  anomaly.py  endpoint.py  project.py  scan.py  test_run.py
backend/app/services/: discovery_service.py  endpoint_service.py  ml_service.py  project_service.py  rq_helper.py  scheduler.py  test_runner_service.py
backend/app/tests/: test_anomalies.py  test_enqueue_helper.py  test_integration.py  test_rq_request_id.py
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.tsx  styles.css
frontend/src/app/routes/: AnomaliesPage.tsx  EndpointDetailPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ScanDetailPage.tsx
frontend/src/components/: AuthConfigForm.tsx  Layout.tsx  ui.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
infra/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/env/: .env  .env.example
